rearchtecture: Noti 재개발 (사유: 무지성 Ai남발로 인한 프로젝트 방향성 상실 및 코어기능 수행 불가)